fix: word wrap when long english string(#master)

--- a/components/popover/tooltip/tooltip.less
+++ b/components/popover/tooltip/tooltip.less
@@ -6,4 +6,6 @@
   border-radius: 10px;
   padding: 5px 10px;
   max-width: 200px;
+
+  word-break: break-all;
 }
